samples/bad/1.water
s = 0
for (i = 0; i < 9; i += 1) s += i
print s
